# yinyang-dev

./: Cargo.toml  README.md
sample-project/: .gitignore  Cargo.toml
sample-project/bc-user/: .env  Cargo.toml  diesel.toml
sample-project/bc-user/migrations/2025-01-09-100316_users/: up.sql
sample-project/bc-user/src/: init.rs  lib.rs  migrations.rs  schema.rs  settings.rs
sample-project/bc-user/src/adapters/: mod.rs  spi_email.rs
sample-project/bc-user/src/adapters/api_http/: mod.rs  user.rs
sample-project/bc-user/src/adapters/spi_db/: mod.rs  user.rs
sample-project/bc-user/src/adapters/spi_db/dao/: user.rs
sample-project/bc-user/src/application/: mod.rs  traits.rs
sample-project/bc-user/src/application/user/: create.rs  mod.rs  update.rs  update_password.rs
sample-project/bc-user/src/domain/: user.rs
sample-project/bc-user/src/infrastructure/: credential.rs  mod.rs  router.rs  types.rs
sample-project/common/: Cargo.toml
sample-project/common/src/: lib.rs  settings.rs
sample-project/scripts/dev/: dev-compose.yaml
sample-project/src/: http.rs  main.rs  settings.rs
src/: bc_context.rs  entity.rs  field_check3.rs  field_checker.rs  field_checker2.rs  field_checker4.rs  field_checker5.rs  helper.rs  lib.rs  loader.rs  main.rs  parse_find.rs  trait_ref.rs  workspace.rs
src/refact/: bagua.rs  mod.rs  project.rs
test-projects/field-check/: Cargo.toml
test-projects/field-check/bc-aa/: Cargo.toml
test-projects/field-check/bc-aa/src/: init.rs  lib.rs  settings.rs
test-projects/field-check/bc-aa/src/adapters/: mod.rs
test-projects/field-check/bc-aa/src/adapters/api_http/: mod.rs
test-projects/field-check/bc-aa/src/adapters/spi_db/: mod.rs
test-projects/field-check/bc-aa/src/application/: field_access.rs  find.rs  mini.rs  mod.rs
test-projects/field-check/bc-aa/src/domain/: aa.rs  mod.rs
test-projects/field-check/bc-aa/src/infrastructure/: mod.rs  types.rs
test-projects/field-check/common/src/: init.rs  logger.rs  postgres.rs
test-projects/field-check/config/: beta.toml
test-projects/field-check/src/: http.rs  main.rs  settings.rs
