[package]
name = "yinyang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"

ra_ap_hir = "0.0.244"
ra_ap_ide = "0.0.244"
ra_ap_ide_db = "0.0.244"
ra_ap_load-cargo = "0.0.244"
ra_ap_paths = "0.0.244"
ra_ap_proc_macro_api = "0.0.244"
ra_ap_project_model = "0.0.244"
ra_ap_span = "0.0.244"
ra_ap_syntax = "0.0.244"
ra_ap_vfs = "0.0.244"
walkdir = "2.5.0"
