[package]
name = "yinyang"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"

ra_ap_hir = "0.0.270"
ra_ap_hir_ty = "0.0.270"
ra_ap_hir_def = "0.0.270"
ra_ap_hir_expand = "0.0.270"
ra_ap_ide = "0.0.270"
ra_ap_ide_db = "0.0.270"
ra_ap_load-cargo = "0.0.270"
ra_ap_paths = "0.0.270"
ra_ap_proc_macro_api = "0.0.270"
ra_ap_project_model = "0.0.270"
ra_ap_span = "0.0.270"
ra_ap_syntax = "0.0.270"
ra_ap_vfs = "0.0.270"
ra_ap_base_db = "0.0.270"
chalk-ir = "0.100"
walkdir = "2.5.0"
smallvec = "1.14.0"
line-index = "0.1.2"
indexmap = "2.8.0"
derive_more = { version = "2.0.1", features = ["from"] }

ra_ap_test_fixture = "0.0.270"

[profile.test]
inherits = "release"
