[package]
name = "sample-project"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["common", "bc-*"]

[workspace.dependencies]
common = { path = "./common" }
anyhow = "1"
actix-web = "4.9.0"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
config = "0.14"
linkme = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
diesel = { version = "2.2", features = ["postgres", "serde_json", "chrono"] }
diesel-async = { version = "0.5", features = ["deadpool", "postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
indexmap = { version = "2.6.0", features = ["serde"] }
serde_json = "1.0.134"

[workspace.dependencies.bagua]
path = "/home/sen/web-rearch/bagua-dev"
package = "bagua-dev"
features = ["flake-id", "diesel-postgres"]

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
common.workspace = true
config.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
bagua.workspace = true
diesel_migrations.workspace = true

[dependencies.bc-user]
path = "./bc-user"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
